# clipper

./: .gitignore  404.html  README.md  cli.py  clipper_config.json  index.html  mkdocs.yml  prompts.txt  pyproject.toml  setup.py  workflow.json  workflow_2025-05-02_12-41-11.json  workflow_base.json
.github/: python-package.yml
.github/workflows/: python-package.yml
clipper/: cli.py  core.py
config/: index.html
development/: index.html
docs/: config.md  development.md  index.md  usage.md
search/: search_index.json
tests/: test_cli.py
tools/: zip_project.py
usage/: index.html
